# rabbit

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml
.circleci/: config.yml
scripts/: circle_linux_configure_build_test.py
sources/: CMakeLists.txt
sources/include/rabbit/: bin_ops.h  bin_reader.h  bin_writer.h  bit_holder.h  bit_ops.h  builtin.h  deserialize.h  details.h  endian.h  rabbit.h  reader.h  serialize.h  typedefs.h  user_literals.h  utils.h  writer.h
sources/src/: rabbit.cpp
tests/: CMakeLists.txt
tests/include/: add_bits_constexpr_tests.h  add_bits_tests.h  add_value_constexpr_tests.h  add_value_tests.h  buffer_tests.h  copy_bits_constexpr_tests.h  copy_bits_tests.h  data_formatters_tests.h  get_value_constexpr_tests.h  get_value_tests.h  result_adapter_specs.h  serialization_tests.h  test_helpers.h
tests/src/: add_bits_constexpr_tests.cpp  add_bits_tests.cpp  add_value_constexpr_instantiation.cpp  add_value_constexpr_tests.cpp  add_value_instantiation.cpp  add_value_tests.cpp  bin_ops_tests.cpp  bin_reader_tests.cpp  bin_writer_tests.cpp  builtin_tests.cpp  copy_bits_constexpr_instantiation.cpp  copy_bits_constexpr_tests.cpp  copy_bits_instantiation.cpp  copy_bits_tests.cpp  deserialize_tests.cpp  endian_tests.cpp  get_value_constexpr_instantiation.cpp  get_value_constexpr_tests.cpp  get_value_instantiation.cpp  get_value_tests.cpp  main_tests.cpp  rabbit_tests.cpp  reader_tests.cpp  serialize_tests.cpp  test_helpers.cpp  test_helpers_tests.cpp  v2_details_tests.cpp  writer_tests.cpp
